tests/negative/test_data_glob_arr_not_def_init.orb
data Foo;

Foo[4] f;

fnc main() {
}